@@ -42,7 +42,7 @@ namespace evf{
       void preModule(const edm::ModuleDescription&);
       void postModule(const edm::ModuleDescription&);
 
-      void setMicroState(std::string const &);
+      void setMicroState(std::string const *);
       
     private:
 
